# lab-fastapi-hab-2312

./: .pre-commit-config.yaml  function_app.py  pyproject.toml  requirements-dev.txt
.fleet/: settings.json
.github/workflows/: main_lab-fast-api-hab-2312.yml
app/: main.py  model.py
